Java 17 / Spring 6 / Spring Boot 3 Upgrade
Issue-ID: POLICY-4671
Change-Id: I249416af830db638a314325e45948015a21134d4
Signed-off-by: adheli.tavares <adheli.tavares@est.tech>